ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
spec:
  rules:
  - host: flask.co.in
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: flask-app-service
            port: 
              number: 5000
